--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="texto3"><h1>Winter Home</h1></a>
+        <a href="../index.html" class="texto3"><h1>Winter Home</h1></a>
     </header>
 
     <nav id="navbar"></nav>
@@ -26,7 +26,7 @@
 
         </section>
         <section>
-            
+
         </section>
     </main>
 
