--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
     </main>
 
-    <iframe src='https://webchat.botframework.com/embed/elcheems-bot?s=TU_SECRETO_AQUÍ' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    <!--<iframe src='https://webchat.botframework.com/embed/elcheems-bot?s=TU_SECRETO_AQUÍ' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>-->
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
