--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav id="navbar"></nav>
 
     <main>
-        <h2 class="texto">Bienvenido a Winter Home</h2>}
+        <h2 class="texto">Bienvenido a Winter Home</h2>
         <section>
 
         </section>
@@ -30,7 +30,7 @@
         </section>
     </main>
 
-    <!--<iframe src='https://webchat.botframework.com/embed/elcheems-bot?s=TU_SECRETO_AQUÍ' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>-->
+    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
