--- a/index.html
+++ b/index.html
@@ -15,10 +15,20 @@
 </head>
 <body>
     <header>
-        <a href="../index.html" class="texto3"><h1>Winter Home</h1></a>
+        <a href="index.html" class="texto3"><h1>Winter Home</h1></a>
     </header>
 
-    <nav id="navbar"></nav>
+    <div class="nav-bg">
+        <nav class="navegacion-principal contenedor">
+            <a href="index.html">Inicio</a>
+            <a href="./views/lugares_visitar.html">Lugares a Visitar</a>
+            <a href="./views/mejores_hospedajes.html">Mejores Hospedajes</a>
+            <a href="./views/transporte_economico.html">Transporte Economico</a>
+            <a href="./views/paginas_voluntariado.html">Paginas de Voluntariado</a>
+            <a href="./views/contacto.html">Contacto</a>
+            <a href="./views/preguntas_frecuentes.html">Preguntas Frecuentes</a>
+        </nav>
+    </div>
 
     <main>
         <h2 class="texto">Bienvenido a Winter Home</h2>
