--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </section>
     </main>
 
-    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+    <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
 
