--- a/index.html
+++ b/index.html
@@ -31,20 +31,16 @@
     </div>
 
     <main>
-        <h2 class="texto">Bienvenido a Winter Home</h2>
-        <section>
-
-        </section>
-        <section>
-
-        </section>
+        <h1 class="texto">Bienvenido a Winter Home</h1>
+        <img src="./img/WINTER HOME PRESENTA.jpg" alt="presentacion" style="width: 100%;"><br><br>
+        <section class="contenedor sombra">
+            <h2 class="texto">¿Como funciona el bot?</h2>
+            <li></li>
+        </section><br>
     </main>
 
     <iframe src='https://webchat.botframework.com/embed/elcheems-bot1?s=G6J_JubyYgk.rfzdVE2Ido4fcBFEfBSNfReLK66omnF6Fz7Yfn9nZuw' style='min-width: 400px; width: 100%; min-height: 500px; border-radius: 2rem;'></iframe><br>
 
     <footer class="texto"><h2>Todos los Derechos Reservados a Winter Home</h2></footer>
-
-    <script src="./js/navbar.js" type="module"></script>
-    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
