--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
         <img src="./img/WINTER HOME PRESENTA.jpg" alt="presentacion" style="width: 100%;"><br><br>
         <section class="contenedor sombra">
             <h2 class="texto">¿Como funciona el bot?</h2>
-            <li></li>
+            <li>Introducir un mensaje (. , ? , Hola, ), </li>
+            <li>Cheems Navideño se presentara y le preguntara si tiene un sitio turistio en especifico (Especifique la descripción de su sitio soñado). Si no tiene indicar (No lo he pensado, No se me ha ocurrido o simplemente no)</li>
+            <li>Si no tiene indicar (No lo he pensado, No se me ha ocurrido o simplememnte no). Cheems le sugerira los mejores citios que tenga a su disposición</li>
         </section><br>
     </main>
 
